- Fixed bug #55156 (ReflectionClass::getDocComment() returns comment even though the class has none)